# vscode-merge-tool-adapter-cli

./: Cargo.toml
.github/workflows/: reviewdog.yml  rust.yml
src/: main.rs  test.rs  utils.rs
